--- a/views/home.hbs
+++ b/views/home.hbs
@@ -1,162 +1,9 @@
-<header>
-        <div class="container">
-            <div class="row home-title">
-                <div class="col-md-12">
-                    <h1>Welcome</h1>
-                    <div class="typewriter-container">
-                        <div class="typewriter">
-                            <p class="welcome">Rejoignez l'aventure!</p>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </div>
+{{> header }}
 
-    </header>
-    <!--- Cards-->
-    <section class="famille-cards" id="cards">
-        <div class="container">
-            <div class="row">
-                <div class="col-md-12">
-                    <h2> Actualités</h2>
+{{> home/cards}}  
+    
+{{>home/banner}}
 
-                </div>
-
-                <div class="col-md-4">
-                    <div class="famille-details">
-                        <img src="assets/images/paysage2.jpg" alt="paysage">
-                        <h4>Première famille</h4>
-                        <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Qui accusamus doloribus et
-                            tempora
-                            id voluptates dicta unde similique suscipit enim. Pariatur vero sunt et earum quod
-                            laborum,
-                            facilis eos quos.</p>
-                    </div>
-                </div>
-                <div class="col-md-4">
-                    <div class="famille-details">
-                        <img src="assets/images/paysage4.jpg" alt="paysage">
-                        <h4>Deuxième famille</h4>
-                        <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Qui accusamus doloribus et
-                            tempora
-                            id voluptates dicta unde similique suscipit enim. Pariatur vero sunt et earum quod
-                            laborum,
-                            facilis eos quos.</p>
-                    </div>
-                </div>
-                <div class="col-md-4">
-                    <div class="famille-details">
-                        <img src="assets/images/paysage3.jpg" alt="paysage">
-                        <h4>Troisième famille</h4>
-                        <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Qui accusamus doloribus et
-                            tempora
-                            id voluptates dicta unde similique suscipit enim. Pariatur vero sunt et earum quod
-                            laborum,
-                            facilis eos quos.</p>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </section>
-    <!--- bannière--->
-    <section class="banniere">
-        <div class="container">
-            <div class="row">
-                <div class="col-md-12">
-                    <h2>La bannière</h2>
-                    <h3>"Avec du temps et de la patience, on vient à bout de tout."</h3>
-                </div>
-            </div>
-        </div>
-    </section>
-
-    <!--- Contact--->
-    <section id="contact" class="theme-contact">
-        <div class="container">
-            <div class="row">
-                <div class="col-md-12">
-                    <div class="row">
-                        <div class="col-md-12">
-                            <div class="form">
-                                <h2>Contactez-nous</h2>
-                                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Mollitia
-                                    veritatis vel
-                                    consequatur
-                                    aspernatur voluptatem nisi eius omnis adipisci illum maiores odit magnam
-                                    esse
-                                    deserunt, quo
-                                    voluptate et assumenda expedita iste?</p>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="row">
-                        <div class="col-md-4">
-                            <div class="phone">
-                                <p><i class="fas fa-phone"></i> 02.00.00.00.00</p>
-                            </div>
-                        </div>
-                        <div class="col-md-8">
-                            <div class="adress">
-                                <p><i class="fas fa-map-marker-alt"></i> Adresse 72450 Montfort-le-Gesnois
-                                </p>
-                            </div>
-                        </div>
-
-                    </div>
-                    <form>
-                        <!--- Nom & Email- -->
-                        <div class="row">
-                            <div class="col-md-6">
-                                <div class="contact-form">
-                                    <label>Nom:</label>
-                                    <input type="text" id="name" />
-                                </div>
-                            </div>
-                            <div class="col-md-6">
-                                <div class="contact-form">
-                                    <label>Email:</label>
-                                    <input type="email" id="email" placeholder="Ajouter votre email" />
-                                </div>
-                            </div>
-                        </div>
-                        <!--- Service- -->
-                        <div class="row">
-                            <div class="col-md-12">
-                                <div class="contact-form">
-                                    <label>Sélectionnez le service</label>
-                                    <select>
-                                        <option>1er Service</option>
-                                        <option>2ème Service</option>
-                                        <option>SAV</option>
-                                    </select>
-                                </div>
-                            </div>
-                        </div>
-
-                        <!---Message--->
-                        <div class="row">
-                            <div class="col-md-12">
-                                <div class="contact-form">
-                                    <label>Votre message:</label>
-                                    <textarea id="message" rows="3" class="contact-message"> </textarea>
-                                </div>
-                            </div>
-                        </div>
-                        <!--- Bouton -->
-                        <div class="row">
-                            <div class="col-md-12">
-                                <div class="contact-form">
-                                    <button class="btn btn-contact">Envoyer</button>
-                                </div>
-
-                            </div>
-                        </div>
-
-                    </form>
-                </div>
-            </div>
-        </div>
-    </section>
-   
+{{> home/contact}}
 
 
