--- a/views/partials/navbar.hbs
+++ b/views/partials/navbar.hbs
@@ -11,19 +11,19 @@
 
                 <ul class="navbar-nav me-auto mb-2mb-lg-0">
                     <li class="nav-item">
-                        <a class="nav-link" aria-current="page" href="index.html">Home</a>
+                        <a class="nav-link" aria-current="page" href="/">Home</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="blog.html">Blog</a>
+                        <a class="nav-link" href="blog">Blog</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="pics.html">Photos</a>
+                        <a class="nav-link" href="pics">Photos</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="contact.html">Nous contacter</a>
+                        <a class="nav-link" href="contact">Nous contacter</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="Admin.html">Admin</a>
+                        <a class="nav-link" href="Admin">Admin</a>
                     </li>
                 </ul>
 
