parcing blog/photos/contact/register/admin

--- a/views/layouts/main.hbs
+++ b/views/layouts/main.hbs
@@ -1,8 +1,11 @@
+{{!-- 
+    Layout: Main
+ --}}
 
 <!--Composotion page type-->
 {{> HeadDefault }}
 
-{{> navbar }}
+{{> navbar/navbar }}
 
 {{{ body }}}
 
