--- a/views/partials/blog/cards.hbs
+++ b/views/partials/blog/cards.hbs
@@ -1,3 +1,6 @@
+{{!-- 
+    Partial : blog/Cards
+ --}}
 <!--- Cards--->
 <section class="famille-prod" id="cards">
     <div class="container-fluid">
@@ -13,7 +16,7 @@
                         id voluptates dicta unde similique suscipit enim. Pariatur vero sunt et earum quod
                         laborum,
                         facilis eos quos.</p>
-                    <a href="blog-id.html" class="btn btn-ghost">Voir l'article</a>
+                    <a href="blog-id" class="btn btn-ghost">Voir l'article</a>
                 </div>
             </div>
             <div class="col-md-4">
@@ -25,7 +28,7 @@
                         id voluptates dicta unde similique suscipit enim. Pariatur vero sunt et earum quod
                         laborum,
                         facilis eos quos.</p>
-                    <a href="blog-id.html" class="btn btn-ghost">Voir l'article</a>
+                    <a href="blog-id" class="btn btn-ghost">Voir l'article</a>
                 </div>
             </div>
             <div class="col-md-4">
@@ -37,7 +40,7 @@
                         id voluptates dicta unde similique suscipit enim. Pariatur vero sunt et earum quod
                         laborum,
                         facilis eos quos.</p>
-                    <a href="blog-id.html" class="btn btn-ghost">Voir l'article</a>
+                    <a href="blog-id" class="btn btn-ghost">Voir l'article</a>
                 </div>
             </div>
 
@@ -54,7 +57,7 @@
                         id voluptates dicta unde similique suscipit enim. Pariatur vero sunt et earum quod
                         laborum,
                         facilis eos quos.</p>
-                    <a href="Pages/blog-id.html" class="btn btn-ghost">Voir l'article</a>
+                    <a href="blog-id" class="btn btn-ghost">Voir l'article</a>
                 </div>
             </div>
             <div class="col-md-4">
@@ -66,7 +69,7 @@
                         id voluptates dicta unde similique suscipit enim. Pariatur vero sunt et earum quod
                         laborum,
                         facilis eos quos.</p>
-                    <a href="blog-id.html" class="btn btn-ghost">Voir l'article</a>
+                    <a href="blog-id" class="btn btn-ghost">Voir l'article</a>
                 </div>
             </div>
             <div class="col-md-4">
@@ -78,7 +81,7 @@
                         id voluptates dicta unde similique suscipit enim. Pariatur vero sunt et earum quod
                         laborum,
                         facilis eos quos.</p>
-                    <a href="blog-id.html" class="btn btn-ghost">Voir l'article</a>
+                    <a href="blog-id" class="btn btn-ghost">Voir l'article</a>
                 </div>
             </div>
 
