--- a/views/partials/header.hbs
+++ b/views/partials/header.hbs
@@ -1,15 +1,20 @@
+{{!-- 
+    Page type:: Header 
+ --}}
+
+
 <header>
-        <div class="container">
-            <div class="row home-title">
-                <div class="col-md-12">
-                    <h1>Welcome</h1>
-                    <div class="typewriter-container">
-                        <div class="typewriter">
-                            <p class="welcome">Rejoignez l'aventure!</p>
-                        </div>
+    <div class="container">
+        <div class="row home-title">
+            <div class="col-md-12">
+                <h1>Welcome</h1>
+                <div class="typewriter-container">
+                    <div class="typewriter">
+                        <p class="welcome">Rejoignez l'aventure!</p>
                     </div>
                 </div>
             </div>
         </div>
+    </div>
 
-    </header>
+</header>
