--- a/views/partials/home/cards.hbs
+++ b/views/partials/home/cards.hbs
@@ -1,3 +1,6 @@
+  {{!-- 
+    Partial : Home/Cards (News)
+ --}}
   <!--- Cards-->
     <section class="famille-cards" id="cards">
         <div class="container">
