--- a/views/partials/footer.hbs
+++ b/views/partials/footer.hbs
@@ -1,29 +1,34 @@
- <!--- Footer--->
-    <footer class="container-fluid">
-        <div class="row">
+{{!--
+Page type:Partial Footer /
+--}}
 
-            <div class="copyright">
 
-                <div class="col-md-12">
-                    <div class="contact-form">
-                        <label>Newsletter:</label>
-                        <input type="email" id="email" placeholder="Ajouter votre email" />
-                        <button class="btn btn-contact">S'inscrire</button>
+<!--- Footer--->
+<footer class="container-fluid">
+    <div class="row">
 
-                    </div>
+        <div class="copyright">
+
+            <div class="col-md-12">
+                <div class="contact-form">
+                    <label>Newsletter:</label>
+                    <input type="email" id="email" placeholder="Ajouter votre email" />
+                    <button class="btn btn-contact">S'inscrire</button>
+
                 </div>
-
-                <div class="col-md-12 socials">
-                    <a href="#"> <i class="fab fa-discord black"></i></a>
-                    <a href="#"> <i class="fab fa-facebook black"></i></a>
-                    <a href="#"> <i class="fab fa-twitter black"></i></a>
-                    <a href="#"> <i class="fab fa-linkedin black"></i></a>
-                    <a href="#"> <i class="fab fa-snapchat black"></i></a>
-                    <a href="#"> <i class="fab fa-instagram black"></i></a>
-                </div>
-
-                <p class="copyright">Grimou Company © 2021 <a href="#">Mentions légales</a></p>
-
             </div>
+
+            <div class="col-md-12 socials">
+                <a href="#"> <i class="fab fa-discord black"></i></a>
+                <a href="#"> <i class="fab fa-facebook black"></i></a>
+                <a href="#"> <i class="fab fa-twitter black"></i></a>
+                <a href="#"> <i class="fab fa-linkedin black"></i></a>
+                <a href="#"> <i class="fab fa-snapchat black"></i></a>
+                <a href="#"> <i class="fab fa-instagram black"></i></a>
+            </div>
+
+            <p class="copyright">Grimou Company © 2021 <a href="#">Mentions légales</a></p>
+
         </div>
-    </footer>
+    </div>
+</footer>
