--- a/views/partials/home/contact.hbs
+++ b/views/partials/home/contact.hbs
@@ -36,14 +36,14 @@
                         <div class="row">
                             <div class="col-md-6">
                                 <div class="contact-form">
-                                    <label>Nom:</label>
-                                    <input type="text" id="name" />
+                                    <label class="form-label">Nom:</label>
+                                    <input type="text" class="form-control" placeholder="Ajouter votre Nom"id="name" />
                                 </div>
                             </div>
                             <div class="col-md-6">
                                 <div class="contact-form">
-                                    <label>Email:</label>
-                                    <input type="email" id="email" placeholder="Ajouter votre email" />
+                                    <label class="form-label">Email:</label>
+                                    <input class="form-control" type="email" id="email" placeholder="Ajouter votre email" />
                                 </div>
                             </div>
                         </div>
@@ -51,7 +51,7 @@
                         <div class="row">
                             <div class="col-md-12">
                                 <div class="contact-form">
-                                    <label>Sélectionnez le service</label>
+                                    <label class="form-label">Sélectionnez le service</label>
                                     <select>
                                         <option>1er Service</option>
                                         <option>2ème Service</option>
@@ -66,7 +66,7 @@
                             <div class="col-md-12">
                                 <div class="contact-form">
                                     <label>Votre message:</label>
-                                    <textarea id="message" rows="3" class="contact-message"> </textarea>
+                                    <textarea id="message" rows="3" class="contact-message form-control"> </textarea>
                                 </div>
                             </div>
                         </div>
