--- a/views/partials/home/cards.hbs
+++ b/views/partials/home/cards.hbs
@@ -1,42 +1,50 @@
-  {{!-- 
-    Partial : Home/Cards (News)
- --}}
-  <!--- Cards-->
-    <section class="famille-cards" id="cards">
-        <div class="container">
-            <div class="row">
-                <div class="col-md-12">
-                    <h2> Actualités</h2>
+{{!--
+Partial : Home/Cards (News)
+--}}
+<!--- Cards-->
+<section class="famille-cards" id="cards">
+    <div class="container">
+        <div class="row">
+            <div class="col-md-12">
+                <h2> Actualités</h2>
 
-                </div>
+            </div>
 
-                <div class="col-md-4">
-                    <div class="famille-details">
-                        <img src="assets/images/paysage2.jpg" alt="paysage">
-                        <h4>Première famille</h4>
-                        <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Qui accusamus doloribus et
+            <div class="col-md-4">
+                <div class="famille-details card">
+                    <img class="card-img-top" src="assets/images/paysage2.jpg" alt="paysage">
+                    <div class="card-body">
+                        <h4 class="card-title">Titre</h4>
+                        <p class="card-text">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Qui accusamus
+                            doloribus et
                             tempora
                             id voluptates dicta unde similique suscipit enim. Pariatur vero sunt et earum quod
                             laborum,
                             facilis eos quos.</p>
                     </div>
                 </div>
-                <div class="col-md-4">
-                    <div class="famille-details">
-                        <img src="assets/images/paysage4.jpg" alt="paysage">
-                        <h4>Deuxième famille</h4>
-                        <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Qui accusamus doloribus et
+            </div>
+            <div class="col-md-4">
+                <div class="famille-details card">
+                    <img class="card-img-top" src="assets/images/paysage4.jpg" alt="paysage">
+                    <div class="card-body">
+                        <h4 class="card-title">Titre</h4>
+                        <p class="card-text">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Qui accusamus
+                            doloribus et
                             tempora
                             id voluptates dicta unde similique suscipit enim. Pariatur vero sunt et earum quod
                             laborum,
                             facilis eos quos.</p>
                     </div>
                 </div>
-                <div class="col-md-4">
-                    <div class="famille-details">
-                        <img src="assets/images/paysage3.jpg" alt="paysage">
-                        <h4>Troisième famille</h4>
-                        <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Qui accusamus doloribus et
+            </div>
+            <div class="col-md-4">
+                <div class="famille-details card">
+                    <img class="card-img-top" src="assets/images/paysage3.jpg" alt="paysage">
+                    <div class="card-body">
+                        <h4 class="card-title">Titre</h4>
+                        <p class="card-text">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Qui accusamus
+                            doloribus et
                             tempora
                             id voluptates dicta unde similique suscipit enim. Pariatur vero sunt et earum quod
                             laborum,
@@ -45,4 +53,5 @@
                 </div>
             </div>
         </div>
-    </section>
+    </div>
+</section>
