--- a/views/partials/Admin/gestblog.hbs
+++ b/views/partials/Admin/gestblog.hbs
@@ -29,21 +29,23 @@ Partial : Admin/ Gestion Blog
                 <div class="row">
 
                     <div class="col-md-4">
-                        <div class="famille-details">
-                            <img src="assets/images/paysage2.jpg">
-                            <h4>1er Article</h4>
-                            <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Qui
-                                accusamus doloribus et
-                                tempora
-                                id voluptates dicta unde similique suscipit enim. Pariatur vero sunt
-                                et earum quod
-                                laborum,
-                                facilis eos quos.</p>
+                        <div class="famille-details card">
+                            <img class="card-img-top" src="assets/images/paysage2.jpg">
+                            <div class="card-body">
+                                <h4 class="card-title">1er Article</h4>
+                                <p class="card-text">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Qui
+                                    accusamus doloribus et
+                                    tempora
+                                    id voluptates dicta unde similique suscipit enim. Pariatur vero sunt
+                                    et earum quod
+                                    laborum,
+                                    facilis eos quos.</p>
 
-                            <button type="button" class="btn produits-icon" data-bs-toggle="modal"
-                                data-bs-target="#CardsModal">
-                                <i class="far fa-edit"></i>
-                            </button>
+                                <button type="button" class="btn produits-icon" data-bs-toggle="modal"
+                                    data-bs-target="#CardsModal">
+                                    <i class="far fa-edit"></i>
+                                </button>
+                            </div>
 
 
                         </div>
@@ -51,40 +53,44 @@ Partial : Admin/ Gestion Blog
                     </div>
 
                     <div class="col-md-4">
-                        <div class="famille-details">
-                            <img src="assets/images/paysage4.jpg">
-                            <h4>2ème Article</h4>
-                            <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Qui
-                                accusamus doloribus et
-                                tempora
-                                id voluptates dicta unde similique suscipit enim. Pariatur vero sunt
-                                et earum quod
-                                laborum,
-                                facilis eos quos.</p>
+                        <div class="famille-details card">
+                            <img class="card-img-top" src="assets/images/paysage4.jpg">
+                            <div class="card-body">
+                                <h4 class="card-title">2ème Article</h4>
+                                <p class="card-text">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Qui
+                                    accusamus doloribus et
+                                    tempora
+                                    id voluptates dicta unde similique suscipit enim. Pariatur vero sunt
+                                    et earum quod
+                                    laborum,
+                                    facilis eos quos.</p>
 
-                            <button type="button" class="btn produits-icon" data-bs-toggle="modal"
-                                data-bs-target="#CardsModal">
-                                <i class="far fa-edit"></i>
-                            </button>
+                                <button type="button" class="btn produits-icon" data-bs-toggle="modal"
+                                    data-bs-target="#CardsModal">
+                                    <i class="far fa-edit"></i>
+                                </button>
+                            </div>
                         </div>
                     </div>
 
                     <div class="col-md-4">
-                        <div class="famille-details">
-                            <img src="assets/images/paysage3.jpg">
-                            <h4>3ème Article</h4>
-                            <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Qui
-                                accusamus doloribus et
-                                tempora
-                                id voluptates dicta unde similique suscipit enim. Pariatur vero sunt
-                                et earum quod
-                                laborum,
-                                facilis eos quos.</p>
+                        <div class="famille-details card">
+                            <img class="card-img-top" src="assets/images/paysage3.jpg">
+                            <div class="card-body">
+                                <h4 class="card-title">3ème Article</h4>
+                                <p class="card-text">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Qui
+                                    accusamus doloribus et
+                                    tempora
+                                    id voluptates dicta unde similique suscipit enim. Pariatur vero sunt
+                                    et earum quod
+                                    laborum,
+                                    facilis eos quos.</p>
 
-                            <button type="button" class="btn produits-icon" data-bs-toggle="modal"
-                                data-bs-target="#CardsModal">
-                                <i class="far fa-edit"></i>
-                            </button>
+                                <button type="button" class="btn produits-icon" data-bs-toggle="modal"
+                                    data-bs-target="#CardsModal">
+                                    <i class="far fa-edit"></i>
+                                </button>
+                            </div>
                         </div>
                     </div>
 
