--- a/views/partials/blog/cards.hbs
+++ b/views/partials/blog/cards.hbs
@@ -1,6 +1,6 @@
-{{!-- 
-    Partial : blog/Cards
- --}}
+{{!--
+Partial : blog/Cards
+--}}
 <!--- Cards--->
 <section class="famille-prod" id="cards">
     <div class="container-fluid">
@@ -8,39 +8,100 @@
 
 
             <div class="col-md-4">
-                <div class="famille-details">
-                    <img src="assets/images/paysage1.jpg" alt="paysage">
-                    <h4>1er Article</h4>
-                    <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Qui accusamus doloribus et
-                        tempora
-                        id voluptates dicta unde similique suscipit enim. Pariatur vero sunt et earum quod
-                        laborum,
-                        facilis eos quos.</p>
-                    <a href="blog-id" class="btn btn-ghost">Voir l'article</a>
+                <div class="famille-details card">
+                    <img class="card-img-top" src="assets/images/paysage1.jpg" alt="paysage">
+                    <div class="card-body">
+                        <h4 class="card-title">1er Article</h4>
+                        <p class="card-text">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Qui accusamus
+                            doloribus et
+                            tempora
+                            id voluptates dicta unde similique suscipit enim. Pariatur vero sunt et earum quod
+                            laborum,
+                            facilis eos quos.</p>
+                        <a href="blog-id" class="btn btn-ghost">Voir l'article</a>
+                    </div>
                 </div>
             </div>
             <div class="col-md-4">
-                <div class="famille-details">
-                    <img src="assets/images/paysage4.jpg" alt="paysage">
-                    <h4>2ème Article</h4>
-                    <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Qui accusamus doloribus et
-                        tempora
-                        id voluptates dicta unde similique suscipit enim. Pariatur vero sunt et earum quod
-                        laborum,
-                        facilis eos quos.</p>
-                    <a href="blog-id" class="btn btn-ghost">Voir l'article</a>
+                <div class="famille-details card">
+                    <img class="card-img-top" src="assets/images/paysage4.jpg" alt="paysage">
+                    <div class="card-body">
+                        <h4 class="card-title">2ème Article</h4>
+                        <p class="card-text">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Qui accusamus
+                            doloribus et
+                            tempora
+                            id voluptates dicta unde similique suscipit enim. Pariatur vero sunt et earum quod
+                            laborum,
+                            facilis eos quos.</p>
+                        <a href="blog-id" class="btn btn-ghost">Voir l'article</a>
+                    </div>
                 </div>
             </div>
             <div class="col-md-4">
-                <div class="famille-details">
-                    <img src="assets/images/paysage3.jpg" alt="paysage">
-                    <h4>3ème Article</h4>
-                    <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Qui accusamus doloribus et
-                        tempora
-                        id voluptates dicta unde similique suscipit enim. Pariatur vero sunt et earum quod
-                        laborum,
-                        facilis eos quos.</p>
-                    <a href="blog-id" class="btn btn-ghost">Voir l'article</a>
+                <div class="famille-details card">
+                    <img class="card-img-top" src="assets/images/paysage3.jpg" alt="paysage">
+                    <div class="card-body">
+                        <h4 class="card-title">3ème Article</h4>
+                        <p class="card-text">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Qui accusamus
+                            doloribus et
+                            tempora
+                            id voluptates dicta unde similique suscipit enim. Pariatur vero sunt et earum quod
+                            laborum,
+                            facilis eos quos.</p>
+                        <a href="blog-id" class="btn btn-ghost">Voir l'article</a>
+                    </div>
+                </div>
+            </div>
+
+
+        </div>
+
+        <div class="row">
+
+
+            <div class="col-md-4">
+                <div class="famille-details card">
+                    <img class="card-img-top" src="assets/images/paysage1.jpg" alt="paysage">
+                    <div class="card-body">
+                        <h4 class="card-title">1er Article</h4>
+                        <p class="card-text">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Qui accusamus
+                            doloribus et
+                            tempora
+                            id voluptates dicta unde similique suscipit enim. Pariatur vero sunt et earum quod
+                            laborum,
+                            facilis eos quos.</p>
+                        <a href="blog-id" class="btn btn-ghost">Voir l'article</a>
+                    </div>
+                </div>
+            </div>
+            <div class="col-md-4">
+                <div class="famille-details card">
+                    <img class="card-img-top" src="assets/images/paysage4.jpg" alt="paysage">
+                    <div class="card-body">
+                        <h4 class="card-title">2ème Article</h4>
+                        <p class="card-text">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Qui accusamus
+                            doloribus et
+                            tempora
+                            id voluptates dicta unde similique suscipit enim. Pariatur vero sunt et earum quod
+                            laborum,
+                            facilis eos quos.</p>
+                        <a href="blog-id" class="btn btn-ghost">Voir l'article</a>
+                    </div>
+                </div>
+            </div>
+            <div class="col-md-4">
+                <div class="famille-details card">
+                    <img class="card-img-top" src="assets/images/paysage3.jpg" alt="paysage">
+                    <div class="card-body">
+                        <h4 class="card-title">3ème Article</h4>
+                        <p class="card-text">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Qui accusamus
+                            doloribus et
+                            tempora
+                            id voluptates dicta unde similique suscipit enim. Pariatur vero sunt et earum quod
+                            laborum,
+                            facilis eos quos.</p>
+                        <a href="blog-id" class="btn btn-ghost">Voir l'article</a>
+                    </div>
                 </div>
             </div>
 
@@ -48,42 +109,53 @@
         </div>
         <div class="row">
 
+
             <div class="col-md-4">
-                <div class="famille-details">
-                    <img src="assets/images/paysage2.jpg" alt="paysage">
-                    <h4>4ème Article</h4>
-                    <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Qui accusamus doloribus et
-                        tempora
-                        id voluptates dicta unde similique suscipit enim. Pariatur vero sunt et earum quod
-                        laborum,
-                        facilis eos quos.</p>
-                    <a href="blog-id" class="btn btn-ghost">Voir l'article</a>
+                <div class="famille-details card">
+                    <img class="card-img-top" src="assets/images/paysage1.jpg" alt="paysage">
+                    <div class="card-body">
+                        <h4 class="card-title">1er Article</h4>
+                        <p class="card-text">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Qui accusamus
+                            doloribus et
+                            tempora
+                            id voluptates dicta unde similique suscipit enim. Pariatur vero sunt et earum quod
+                            laborum,
+                            facilis eos quos.</p>
+                        <a href="blog-id" class="btn btn-ghost">Voir l'article</a>
+                    </div>
                 </div>
             </div>
             <div class="col-md-4">
-                <div class="famille-details">
-                    <img src="assets/images/paysage4.jpg" alt="paysage">
-                    <h4>5ème Article</h4>
-                    <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Qui accusamus doloribus et
-                        tempora
-                        id voluptates dicta unde similique suscipit enim. Pariatur vero sunt et earum quod
-                        laborum,
-                        facilis eos quos.</p>
-                    <a href="blog-id" class="btn btn-ghost">Voir l'article</a>
+                <div class="famille-details card">
+                    <img class="card-img-top" src="assets/images/paysage4.jpg" alt="paysage">
+                    <div class="card-body">
+                        <h4 class="card-title">2ème Article</h4>
+                        <p class="card-text">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Qui accusamus
+                            doloribus et
+                            tempora
+                            id voluptates dicta unde similique suscipit enim. Pariatur vero sunt et earum quod
+                            laborum,
+                            facilis eos quos.</p>
+                        <a href="blog-id" class="btn btn-ghost">Voir l'article</a>
+                    </div>
                 </div>
             </div>
             <div class="col-md-4">
-                <div class="famille-details">
-                    <img src="assets/images/paysage3.jpg" alt="paysage">
-                    <h4>6ème Article</h4>
-                    <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Qui accusamus doloribus et
-                        tempora
-                        id voluptates dicta unde similique suscipit enim. Pariatur vero sunt et earum quod
-                        laborum,
-                        facilis eos quos.</p>
-                    <a href="blog-id" class="btn btn-ghost">Voir l'article</a>
+                <div class="famille-details card">
+                    <img class="card-img-top" src="assets/images/paysage3.jpg" alt="paysage">
+                    <div class="card-body">
+                        <h4 class="card-title">3ème Article</h4>
+                        <p class="card-text">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Qui accusamus
+                            doloribus et
+                            tempora
+                            id voluptates dicta unde similique suscipit enim. Pariatur vero sunt et earum quod
+                            laborum,
+                            facilis eos quos.</p>
+                        <a href="blog-id" class="btn btn-ghost">Voir l'article</a>
+                    </div>
                 </div>
             </div>
+
 
         </div>
     </div>
