--- a/views/partials/blog/cards.hbs
+++ b/views/partials/blog/cards.hbs
@@ -4,14 +4,14 @@ Partial : blog/Cards
 <!--- Cards--->
 <section class="famille-prod" id="cards">
     <div class="container-fluid">
-        <div class="row">
+        <div class="row" id="listCard">
 
 
             <div class="col-md-4">
                 <div class="famille-details card">
                     <img class="card-img-top" src="assets/images/paysage1.jpg" alt="paysage">
                     <div class="card-body">
-                        <h4 class="card-title">1er Article</h4>
+                        <h4 class="card-title">un titre magnifique</h4>
                         <p class="card-text">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Qui accusamus
                             doloribus et
                             tempora
@@ -26,7 +26,7 @@ Partial : blog/Cards
                 <div class="famille-details card">
                     <img class="card-img-top" src="assets/images/paysage4.jpg" alt="paysage">
                     <div class="card-body">
-                        <h4 class="card-title">2ème Article</h4>
+                        <h4 class="card-title">titre incroyable</h4>
                         <p class="card-text">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Qui accusamus
                             doloribus et
                             tempora
@@ -41,7 +41,7 @@ Partial : blog/Cards
                 <div class="famille-details card">
                     <img class="card-img-top" src="assets/images/paysage3.jpg" alt="paysage">
                     <div class="card-body">
-                        <h4 class="card-title">3ème Article</h4>
+                        <h4 class="card-title">un titre super</h4>
                         <p class="card-text">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Qui accusamus
                             doloribus et
                             tempora
@@ -54,16 +54,16 @@ Partial : blog/Cards
             </div>
 
 
-        </div>
 
-        <div class="row">
+
+
 
 
             <div class="col-md-4">
                 <div class="famille-details card">
                     <img class="card-img-top" src="assets/images/paysage1.jpg" alt="paysage">
                     <div class="card-body">
-                        <h4 class="card-title">1er Article</h4>
+                        <h4 class="card-title">un titre Article</h4>
                         <p class="card-text">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Qui accusamus
                             doloribus et
                             tempora
@@ -78,7 +78,7 @@ Partial : blog/Cards
                 <div class="famille-details card">
                     <img class="card-img-top" src="assets/images/paysage4.jpg" alt="paysage">
                     <div class="card-body">
-                        <h4 class="card-title">2ème Article</h4>
+                        <h4 class="card-title">jeu</h4>
                         <p class="card-text">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Qui accusamus
                             doloribus et
                             tempora
@@ -93,7 +93,7 @@ Partial : blog/Cards
                 <div class="famille-details card">
                     <img class="card-img-top" src="assets/images/paysage3.jpg" alt="paysage">
                     <div class="card-body">
-                        <h4 class="card-title">3ème Article</h4>
+                        <h4 class="card-title">bitcoin</h4>
                         <p class="card-text">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Qui accusamus
                             doloribus et
                             tempora
@@ -106,15 +106,15 @@ Partial : blog/Cards
             </div>
 
 
-        </div>
-        <div class="row">
+
+
 
 
             <div class="col-md-4">
                 <div class="famille-details card">
                     <img class="card-img-top" src="assets/images/paysage1.jpg" alt="paysage">
                     <div class="card-body">
-                        <h4 class="card-title">1er Article</h4>
+                        <h4 class="card-title">Comment ? ....e</h4>
                         <p class="card-text">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Qui accusamus
                             doloribus et
                             tempora
@@ -129,7 +129,7 @@ Partial : blog/Cards
                 <div class="famille-details card">
                     <img class="card-img-top" src="assets/images/paysage4.jpg" alt="paysage">
                     <div class="card-body">
-                        <h4 class="card-title">2ème Article</h4>
+                        <h4 class="card-title">ethereum</h4>
                         <p class="card-text">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Qui accusamus
                             doloribus et
                             tempora
@@ -144,7 +144,7 @@ Partial : blog/Cards
                 <div class="famille-details card">
                     <img class="card-img-top" src="assets/images/paysage3.jpg" alt="paysage">
                     <div class="card-body">
-                        <h4 class="card-title">3ème Article</h4>
+                        <h4 class="card-title">Le mans</h4>
                         <p class="card-text">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Qui accusamus
                             doloribus et
                             tempora
