--- a/views/partials/modals/modalLostpass.hbs
+++ b/views/partials/modals/modalLostpass.hbs
@@ -1,6 +1,6 @@
-{{!-- 
-    Modal / navbar : Lost password
- --}}
+{{!--
+Modal / navbar : Lost password
+--}}
 
 <div class="modal fade" id="lostpassword" aria-hidden="true" aria-labelledby="ModalToggleLabel2" tabindex="-1">
     <div class="modal-dialog modal-dialog-centered">
@@ -10,18 +10,22 @@
                 <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
             </div>
             <div class="modal-body">
-                <div class="mb-3">
-                    <p class="fst-italic"> Nous vous enverrons le mail de réinitialisation</p>
-                    <input type="email" class="form-control" id="loginEmail" aria-describedby="emailHelp"
-                        placeholder="Votre Adresse Mail">
-                    <div id="emailHelp" class="form-text"></div>
-                    <button class="btn btn-primary">Envoyer</button>
-                </div>
-            </div>
-            <div class="modal-footer">
-                <button class="btn btn-contact" data-bs-target="#connectModal" data-bs-toggle="modal">Se
-                    connecter</button>
+                <form action="/" method="post">
+                    <div class="mb-3">
+
+                        <p class="fst-italic"> Nous vous enverrons le mail de réinitialisation</p>
+                        <input name="email" type="email" class="form-control" id="loginEmail"
+                            aria-describedby="emailHelp" placeholder="Votre Adresse Mail">
+                        <div id="emailHelp" class="form-text"></div>
+                        <button type="submit" class="btn btn-primary">Envoyer</button>
+
+
+                    </div>
+                    <div class="modal-footer">
+                        <button class="btn btn-contact" data-bs-target="#connectModal" data-bs-toggle="modal">Se
+                            connecter</button>
+                    </div>
+                </form>
             </div>
         </div>
     </div>
-</div>
