--- a/views/partials/home/contact.hbs
+++ b/views/partials/home/contact.hbs
@@ -1,5 +1,6 @@
 <!--- Contact--->
-<section id="contact" class="theme-contact">
+
+<section class="theme-contact">
     <div class="container">
         <div class="row">
             <div class="col-md-12">
@@ -31,19 +32,20 @@
                     </div>
 
                 </div>
-                <form>
+                <!--Create Message--->
+                <form action="/" method="post">
                     <!--- Nom & Email- -->
                     <div class="row">
                         <div class="col-md-6">
                             <div class="contact-form">
                                 <label class="form-label">Nom:</label>
-                                <input type="text" class="form-control" placeholder="Ajouter votre Nom" id="name" />
+                                <input name="Nom" type="text" class="form-control" placeholder="Ajouter votre Nom" />
                             </div>
                         </div>
                         <div class="col-md-6">
                             <div class="contact-form">
                                 <label class="form-label">Email:</label>
-                                <input class="form-control" type="email" id="email" placeholder="Ajouter votre email" />
+                                <input name="email" class="form-control" type="email" id="email" placeholder="Ajouter votre email" />
                             </div>
                         </div>
                     </div>
@@ -52,7 +54,7 @@
                         <div class="col-md-12">
                             <div class="contact-form">
                                 <label class="form-label">Sélectionnez le service</label>
-                                <select>
+                                <select name="Service">
                                     <option>1er Service</option>
                                     <option>2ème Service</option>
                                     <option>SAV</option>
@@ -66,7 +68,7 @@
                         <div class="col-md-12">
                             <div class="contact-form">
                                 <label>Votre message:</label>
-                                <textarea id="message" rows="3" class="contact-message form-control"> </textarea>
+                                <textarea name="message" rows="3" class="contact-message form-control"> </textarea>
                             </div>
                         </div>
                     </div>
@@ -74,7 +76,7 @@
                     <div class="row">
                         <div class="col-md-12">
                             <div class=" contact-form d-grid gap-2 d-md-flex justify-content-md-center">
-                                <button class="btn btn-contact">Envoyer</button>
+                                <button type="submit" class="btn btn-contact">Envoyer</button>
                             </div>
 
                         </div>
