--- a/views/partials/id/id.hbs
+++ b/views/partials/id/id.hbs
@@ -1,6 +1,6 @@
-{{!-- 
-    Partial : Id/Id product/article
- --}}
+{{!--
+Partial : Id/Id product/article
+--}}
 <!---Id-->
 <section id="idcards">
     <div class="container">
@@ -10,11 +10,11 @@
             </div>
         </div>
         <div class="row">
-            <div class="col-md-7">
+            <div class="col-md-8">
                 <img src="assets/images/paysage2.jpg" alt="paysage" class="produit-img">
             </div>
 
-            <div class="col-md-5">
+            <div class="col-md-4">
                 <!--- Para 1-->
                 <div class="produits-plus">
                     <div class="row">
@@ -24,14 +24,17 @@
                             </div>
                         </div>
                         <div class="col-md-10">
-                            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Suscipit illo quaerat
-                                perferendis dolor voluptatem iusto quidem dolorum repudiandae possimus
-                                repellendus,
-                                odio tempore ex alias. Asperiores recusandae saepe voluptates quae possimus.</p>
+                            <p class="text-start">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
+                                eiusmod tempor incididunt
+                                ut labore et dolore magna aliqua. Morbi tristique senectus et netus et. Aliquet
+                                porttitor lacus luctus accumsan tortor posuere ac. Viverra tellus in hac habitasse
+                                platea. At augue eget arcu dictum varius duis. Aliquam faucibus purus in massa tempor
+                                nec feugiat. Varius morbi enim nunc faucibus a pellentesque sit. Lobortis elementum nibh
+                                tellus molestie nunc non blandit massa. Mattis molestie a iaculis at erat pellentesque
+                                adipiscing. Ultrices sagittis orci a scelerisque purus semper eget duis.
+                            </p>
                         </div>
                     </div>
-
-
                 </div>
                 <!--- para 2-->
                 <div class="produits-plus">
@@ -51,27 +54,8 @@
 
 
                 </div>
-                <!--- Para 3-->
-                <div class="produits-plus">
-                    <div class="row">
-                        <div class="col-md-2">
-                            <div class="produits-icon">
-                                <i class="fas fa-award"></i>
-                            </div>
-                        </div>
-                        <div class="col-md-10">
-                            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Suscipit illo quaerat
-                                perferendis dolor voluptatem iusto quidem dolorum repudiandae possimus
-                                repellendus,
-                                odio tempore ex alias. Asperiores recusandae saepe voluptates quae possimus.</p>
-                        </div>
-                    </div>
-
-
-                </div>
-
             </div>
-
         </div>
+
     </div>
 </section>
