--- a/views/partials/id/coms/editcoms.hbs
+++ b/views/partials/id/coms/editcoms.hbs
@@ -4,7 +4,7 @@ Partial : Id/Comms/edit coms
 <!---Ajouter un commentaires--->
 <div class="col-md-12 bg-com">
     <h5 class="text-center">Editer un commentaire</h5>
-    <form action="/blog-id/?_method=PUT">
+    <form action="/blog-id/?_method=PUT" method="post">
         <div class="input-group">
             <span class="input-group-text" id="inputGroupPrepend2">@</span>
             <input name="user" type="text" class="form-control" placeholder="Nom d'utilisateur"
