--- a/views/partials/id/coms/coms.hbs
+++ b/views/partials/id/coms/coms.hbs
@@ -11,7 +11,7 @@ Partial : Id/Commentaires
 
         <div class="col-md-12">
             <div class="client-profil position-relative">
-                <cite> <img src="assets/images/julia.jpg"> Anonyme</cite>
+                <cite> <img src="/assets/images/julia.jpg"> Anonyme</cite>
                 <button type="button" class=" btn like position-absolute top-0 end-0 like"><i class="fas fa-heart">
                         1</i> </button>
                 <blockquote>
@@ -29,7 +29,7 @@ Partial : Id/Commentaires
 
         <div class="col-md-12">
             <div class="client-profil position-relative">
-                <cite> <img src="assets/images/emilie.jpg"> Anonyme</cite>
+                <cite> <img src="/assets/images/emilie.jpg"> Anonyme</cite>
                 <button type="button" class=" btn like position-absolute top-0 end-0 like"><i class="fas fa-heart">
                         1</i> </button>
                 <blockquote>
@@ -44,7 +44,7 @@ Partial : Id/Commentaires
         </div>
         <div class="col-md-12">
             <div class="client-profil position-relative">
-                <cite> <img src="assets/images/blaise.jpg"> Anonyme</cite>
+                <cite> <img src="/assets/images/blaise.jpg"> Anonyme</cite>
                 <button type="button" class=" btn like position-absolute top-0 end-0 like"><i class="fas fa-heart">
                         1</i> </button>
                 <blockquote>
