--- a/views/partials/id/id.hbs
+++ b/views/partials/id/id.hbs
@@ -11,7 +11,7 @@ Partial : Id/Id product/article
         </div>
         <div class="row">
             <div class="col-md-8">
-                <img src="assets/images/paysage2.jpg" alt="paysage" class="produit-img">
+                <img src="/assets/images/paysage2.jpg" alt="paysage" class="produit-img">
             </div>
 
             <div class="col-md-4">
