--- a/views/partials/navbar/navbar.hbs
+++ b/views/partials/navbar/navbar.hbs
@@ -9,7 +9,7 @@
                 aria-controls="navbarToggler" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
             </button>
-            <a class="navbar-brand" href="/"><img src="./assets/images/logo2.png" alt="" width="40" height="35">
+            <a class="navbar-brand" href="/"><img src="/assets/images/logo2.png" alt="" width="40" height="35">
                 Mon Site </a>
             <div class="collapse navbar-collapse" id="navbarToggler">
 
@@ -18,16 +18,16 @@
                         <a class="nav-link" aria-current="page" href="/">Home</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="blog">Blog</a>
+                        <a class="nav-link" href="/blog">Blog</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="pics">Photos</a>
+                        <a class="nav-link" href="/pics">Photos</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="contact">Nous contacter</a>
+                        <a class="nav-link" href="/contact">Nous contacter</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="Admin">Admin</a>
+                        <a class="nav-link" href="/Admin">Admin</a>
                     </li>
                 </ul>
 
